change styling of search icon in navbar to avoid jumping in height (even when it is only a single pixel)

--- a/app/assets/css/navbar.css
+++ b/app/assets/css/navbar.css
@@ -49,6 +49,14 @@
 
 .search-icon {
     width: fit-content !important;
+    display: flex !important;
+    justify-content: center !important;
+    align-items: center !important;
+}
+
+.search-icon-inner {
+    display: flex;
+    align-items: center;
 }
 
 .navigation-container nav ul li a {
